# cmakesl

./: .gitignore  .travis.yml  CMakeLists.cmsl  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
doc/: CMakeLists.txt  DeveloperGuide.md  Doxyfile.in  UserGuide.md
doc/builtin/: bool.cmsl  cmake.cmsl  decl.cmsl  executable.cmsl  library.cmsl  list.cmsl  project.cmsl  version.cmsl
doc/builtin_types/: .doxygen-config  bool.cmsl  cmake.cmsl  double.cmsl  executable.cmsl  extern.cmsl  int.cmsl  library.cmsl  option.cmsl  project.cmsl  string.cmsl  version.cmsl  void.cmsl
examples/: CMakeLists.cmsl  CMakeLists.txt  complete.c  index.c
examples/add_declarative_file/: CMakeLists.cmsl  README.md  lib.cpp
examples/add_subdirectory_declarative/: CMakeLists.cmsl  README.md  main.cpp
examples/cmake_variables_accessor/: CMakeLists.cmsl  README.md  exe.dcmsl  main.cpp  msg.cpp
examples/cmsl_example/: CMakeLists.cmsl  main.cpp
examples/custom_component/: README.md  main.cpp
examples/declarative_root_cmakelists/: CMakeLists.dcmsl  README.md  main.cpp
examples/module_import/: CMakeLists.dcmsl  README.md  my_fancy_exe.dcmsl
facade/: CMakeLists.txt  add_subdirectory_facade.hpp  cmake_facade.cpp  cmake_facade.hpp  visibility.hpp
source/ast/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  ast_builder.cpp  ast_builder.hpp  ast_context.cpp  ast_context.hpp  ast_node.hpp  ast_node_type.hpp  ast_node_visitor.hpp  binary_operator.hpp  block_expression.cpp  block_expression.hpp  block_node.cpp  block_node.hpp  break_node.cpp  break_node.hpp  builtin_ast_context.cpp  builtin_ast_context.hpp  builtin_function.hpp  builtin_function_kind.hpp  class_builder.cpp  class_builder.hpp  class_node.cpp  class_node.hpp  class_type.cpp  class_type.hpp  common_type_finder.cpp  common_type_finder.hpp  conditional_node.cpp  conditional_node.hpp  declaration_node.cpp  declaration_node.hpp  designated_initializers_node.cpp  designated_initializers_node.hpp  enum_node.cpp  enum_node.hpp  escaped_string_builder.hpp  expression_type.hpp  for_node.cpp  (+70 more)
source/common/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  algorithm.hpp  assert.hpp  dumper_utils.cpp  dumper_utils.hpp  enum_class_map.hpp  enum_class_utils.hpp  int_alias.hpp  overloaded.hpp  source_location.cpp  source_location.hpp  source_view.cpp  source_view.hpp  string.hpp  strings_container.hpp  strings_container_impl.cpp  strings_container_impl.hpp  type_traits.hpp
source/decl_ast/: CMakeLists.dcmsl  CMakeLists.txt  ast_node.hpp  ast_node_visitor.hpp  ast_nodes.hpp  parse_errors_observer.hpp  parse_errors_reporter.cpp  parse_errors_reporter.hpp  parser.cpp  parser.hpp
source/decl_sema/: CMakeLists.dcmsl  CMakeLists.txt  builtin_decl_namespace_context.cpp  builtin_decl_namespace_context.hpp  component_creation_sema_function.hpp  decl_namespace_types_accessor.hpp  declarative_import_handler.hpp  sema_builder_ast_visitor.cpp  sema_builder_ast_visitor.hpp  sema_node_visitor.hpp  sema_nodes.hpp
source/errors/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  error.hpp  errors_observer.cpp  errors_observer.hpp
source/exec/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  builtin_function_caller.cpp  builtin_function_caller.hpp  builtin_function_caller2.cpp  builtin_function_caller2.hpp  builtin_function_visitors.hpp  builtin_identifiers_observer.cpp  builtin_identifiers_observer.hpp  builtin_member_function_caller.cpp  builtin_member_function_caller.hpp  builtin_types_operations.hpp  compiled_source.cpp  compiled_source.hpp  context_provider.hpp  cross_translation_unit_static_variables.cpp  cross_translation_unit_static_variables.hpp  cross_translation_unit_static_variables_accessor.hpp  declarative_component_instance_creator.cpp  declarative_component_instance_creator.hpp  declarative_component_property_instances_collecting_visitor.cpp  declarative_component_property_instances_collecting_visitor.hpp  declarative_source_compiler.cpp  declarative_source_compiler.hpp  exec.cpp  exec.hpp  execution.cpp  execution.hpp  execution2.hpp  execution_context.cpp  execution_context.hpp  expression_evaluation_context.hpp  expression_evaluation_visitor.cpp  expression_evaluation_visitor.hpp  extern_argument_parser.cpp  extern_argument_parser.hpp  function_call_evaluator.cpp  function_call_evaluator.hpp  function_caller.hpp  (+23 more)
source/lexer/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  lexer.cpp  lexer.hpp  source_location_manipulator.cpp  source_location_manipulator.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp
source/parse/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  parse_errors_observer.hpp  parser_utils.cpp  parser_utils.hpp
source/sema/: CMakeLists.cmsl  CMakeLists.txt  add_declarative_file_semantic_handler.hpp  add_subdirectory_handler.hpp  add_subdirectory_semantic_handler.hpp  block_node_manipulator.cpp  block_node_manipulator.hpp  builtin_cmake_namespace_context.cpp  builtin_cmake_namespace_context.hpp  builtin_context_base.cpp  builtin_context_base.hpp  builtin_function_kind.hpp  builtin_sema_context.cpp  builtin_sema_context.hpp  builtin_sema_function.cpp  builtin_sema_function.hpp  builtin_token_provider.cpp  builtin_token_provider.hpp  builtin_types_accessor.hpp  builtin_types_finder.hpp  cmake_namespace_types_accessor.hpp  dumper.cpp  dumper.hpp  enum_creator.cpp  enum_creator.hpp  enum_type.hpp  enum_values_context.cpp  enum_values_context.hpp  factories.cpp  factories.hpp  factories_provider.cpp  factories_provider.hpp  failed_initialization_errors_reporters.cpp  failed_initialization_errors_reporters.hpp  function_lookup_result.hpp  function_signature.cpp  function_signature.hpp  functions_context.cpp  functions_context.hpp  generic_type_creation_utils.cpp  (+50 more)
test/ast/: CMakeLists.cmsl  CMakeLists.txt  DISABLED_CMakeLists.dcmsl  ast_context.cpp  escaped_string_builder_test.cpp  parser_error_test.cpp  parser_test.cpp  project_type_test.cpp  type_conversion_check_test.cpp  type_conversion_checker_test.cpp  version_type_test.cpp
test/common/: CMakeLists.cmsl  CMakeLists.dcmsl  CMakeLists.txt  (+2 more)
(+380 files in other folders)
